--- a/app/src/main/res/layout-v21/item_rank.xml
+++ b/app/src/main/res/layout-v21/item_rank.xml
@@ -16,7 +16,7 @@
 
     <androidx.cardview.widget.CardView
         style="@style/Card"
-        app:cardBackgroundColor="@color/primary"
+        app:cardBackgroundColor="?attr/clPrimary"
         app:cardCornerRadius="@dimen/radius_2dp"
         app:cardUseCompatPadding="false">
 
@@ -76,7 +76,7 @@
                 style="@style/ItemRank.Button"
                 android:layout_marginStart="@dimen/layout_8dp"
                 android:contentDescription="@null"
-                android:tint="@color/icon"
+                android:tint="?attr/clIcon"
                 app:srcCompat="@drawable/ic_cancel" />
 
         </LinearLayout>
