--- a/app/src/main/res/layout/act_note.xml
+++ b/app/src/main/res/layout/act_note.xml
@@ -3,4 +3,4 @@
     android:id="@+id/actNote_fl_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"/>
+    android:background="?attr/clBackground"/>
