--- a/app/src/main/res/layout-v21/inc_toolbar.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar.xml
@@ -8,7 +8,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
-        style="@style/Toolbar"
-        app:popupTheme="@style/App.ToolbarTheme" />
+        style="@style/Toolbar.Light"
+        app:popupTheme="@style/App.Light.ToolbarTheme" />
 
 </com.google.android.material.appbar.AppBarLayout>
