--- a/app/src/main/res/layout-v21/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_rank.xml
@@ -8,17 +8,17 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
-        style="@style/Toolbar"
+        style="@style/Toolbar.Light"
         app:contentInsetEnd="@dimen/layout_8dp"
         app:contentInsetLeft="@dimen/layout_8dp"
         app:contentInsetRight="@dimen/layout_8dp"
         app:contentInsetStart="@dimen/layout_8dp"
-        app:popupTheme="@style/App.ToolbarTheme">
+        app:popupTheme="@style/App.Light.ToolbarTheme">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/primaryAccent"
+            app:cardBackgroundColor="?attr/clBackground"
             app:cardCornerRadius="@dimen/radius_2dp"
             app:cardUseCompatPadding="false">
 
