--- a/app/src/main/res/layout/frg_notes.xml
+++ b/app/src/main/res/layout/frg_notes.xml
@@ -17,7 +17,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background"
+        android:background="?attr/clBackground"
         android:orientation="vertical">
 
         <include layout="@layout/inc_toolbar" />
