--- a/app/src/main/res/layout/frg_roll.xml
+++ b/app/src/main/res/layout/frg_roll.xml
@@ -25,7 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background"
+        android:background="?attr/clBackground"
         android:orientation="vertical">
 
         <include
@@ -53,7 +53,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/primary"
+                android:background="?attr/clPrimary"
                 android:orientation="horizontal"
                 android:padding="@dimen/layout_4dp">
 
@@ -66,8 +66,7 @@
                     android:hint="@string/hint_enter_roll"
                     android:imeOptions="flagNoFullscreen"
                     android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
-                    android:maxLines="5"
-                    android:textColor="@color/text" />
+                    android:maxLines="5" />
 
                 <ImageButton
                     android:id="@+id/frgRoll_ib_add"
