--- a/app/src/main/res/layout/inc_toolbar.xml
+++ b/app/src/main/res/layout/inc_toolbar.xml
@@ -7,8 +7,8 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
-        style="@style/Toolbar"
-        app:popupTheme="@style/App.ToolbarTheme" />
+        style="@style/Toolbar.Light"
+        app:popupTheme="@style/App.Light.ToolbarTheme" />
 
     <View style="@style/Divider.Horizontal" />
 
