--- a/app/src/main/res/layout/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout/inc_toolbar_rank.xml
@@ -7,13 +7,14 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
-        style="@style/Toolbar"
-        app:popupTheme="@style/App.ToolbarTheme">
+        style="@style/Toolbar.Light"
+        app:popupTheme="@style/App.Light.ToolbarTheme">
+
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/primaryAccent"
+            app:cardBackgroundColor="?attr/clBackground"
             app:cardCornerRadius="@dimen/radius_2dp"
             app:cardUseCompatPadding="false">
 
