--- a/app/src/main/res/layout/sheet_add.xml
+++ b/app/src/main/res/layout/sheet_add.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="bottom"
     android:orientation="vertical">
 
@@ -10,6 +10,8 @@
         android:id="@+id/sheetAdd_nv_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/menu_sheet_add"/>
+        android:theme="@style/NavigationView"
+        app:itemTextColor="?attr/clText"
+        app:menu="@menu/menu_sheet_add" />
 
 </LinearLayout>
