--- a/app/src/main/res/layout/view_about.xml
+++ b/app/src/main/res/layout/view_about.xml
@@ -60,7 +60,7 @@
                     android:layout_weight="0.5"
                     android:gravity="center"
                     android:text="@string/about_app_developer"
-                    android:textColor="@color/text"
+                    android:textColor="?attr/clText"
                     android:textSize="@dimen/text_16sp" />
 
                 <TextView
@@ -69,7 +69,7 @@
                     android:layout_weight="0.5"
                     android:gravity="center"
                     android:text="@string/about_app_logo_designer"
-                    android:textColor="@color/text"
+                    android:textColor="?attr/clText"
                     android:textSize="@dimen/text_16sp" />
             </LinearLayout>
         </LinearLayout>
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:text="@string/about_app_used_libraries"
-            android:textColor="@color/text"
+            android:textColor="?attr/clText"
             android:textSize="@dimen/text_16sp" />
 
         <TextView
@@ -94,7 +94,7 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:text="@string/about_app_libraries"
-            android:textColor="@color/textSecond"
+            android:textColor="?attr/clSecond"
             android:textSize="@dimen/text_14sp" />
 
     </LinearLayout>
@@ -105,7 +105,7 @@
         android:layout_marginTop="@dimen/layout_4dp"
         android:gravity="center"
         android:text="@string/about_app_version"
-        android:textColor="@color/text"
+        android:textColor="?attr/clText"
         android:textSize="@dimen/text_14sp" />
 
 </LinearLayout>
