--- a/app/src/main/res/values/sty_enter.xml
+++ b/app/src/main/res/values/sty_enter.xml
@@ -21,7 +21,7 @@
         <item name="android:focusable">true</item>
         <item name="android:focusableInTouchMode">true</item>
         <item name="android:textSize">@dimen/text_18sp</item>
-        <item name="android:textColor">@color/textAccent</item>
+        <item name="android:textColor">?attr/clText</item>
     </style>
 
 </resources>
