--- a/app/src/main/res/layout/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout/inc_toolbar_rank.xml
@@ -7,8 +7,8 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
-        style="@style/Toolbar.Light"
-        app:popupTheme="@style/App.Light.ToolbarTheme">
+        style="?attr/styleToolbar"
+        app:popupTheme="?attr/themePopup" >
 
 
         <androidx.cardview.widget.CardView
@@ -53,6 +53,6 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <View style="@style/Divider.Horizontal" />
+    <!--<View style="@style/Divider.Horizontal" />-->
 
 </com.google.android.material.appbar.AppBarLayout>
