--- a/app/src/main/res/animator/strike_path_off.xml
+++ b/app/src/main/res/animator/strike_path_off.xml
@@ -14,7 +14,7 @@
         android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:propertyName="fillColor"
         android:valueFrom="?attr/clAccent"
-        android:valueTo="?attr/clSecond"
+        android:valueTo="?attr/clIcon"
         android:valueType="colorType" />
 
 </set>
