--- a/app/src/main/res/drawable/ic_color_06.xml
+++ b/app/src/main/res/drawable/ic_color_06.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/noteYellow"/>
+    <solid android:color="@color/noteYellow" />
     <stroke
         android:width="1dp"
-        android:color="@color/noteYellowDark"/>
-    <size android:width="24dp" android:height="24dp"/>
+        android:color="@color/noteYellowDark" />
+    <size
+        android:width="24dp"
+        android:height="24dp" />
 </shape>
