--- a/app/src/main/res/drawable/ic_color_10.xml
+++ b/app/src/main/res/drawable/ic_color_10.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-android:shape="oval">
-<solid android:color="@color/noteWhite"/>
-<stroke
-    android:width="1dp"
-    android:color="@color/noteWhiteDark"/>
-<size android:width="24dp" android:height="24dp"/>
+    android:shape="oval">
+    <solid android:color="@color/noteWhite" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/noteWhiteDark" />
+    <size
+        android:width="24dp"
+        android:height="24dp" />
 </shape>
