--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -6,7 +6,13 @@
 
         <import type="sgtmelon.handynotes.office.Help.Icon" />
 
+        <import type="sgtmelon.handynotes.office.Help.Pref" />
+
         <import type="sgtmelon.handynotes.office.Help.Time" />
+
+        <import
+            alias="def"
+            type="sgtmelon.handynotes.office.annot.def.DefTheme" />
 
         <import
             alias="text"
@@ -24,63 +30,76 @@
 
     <androidx.cardview.widget.CardView
         style="@style/Card"
-        app:cardBackgroundColor='@{Icon.getColor(context, false, itemNote.color)}'
-        app:cardUseCompatPadding="false"
-        app:cardCornerRadius="@dimen/radius_2dp">
+        app:cardBackgroundColor='@{Icon.getColorNote(context, itemNote.color, false)}'
+        app:cardCornerRadius="@dimen/radius_2dp"
+        app:cardUseCompatPadding="false">
 
         <LinearLayout
             android:id="@+id/itemNote_ll_click"
             style="@style/ItemNote.Click">
 
-            <TextView
-                android:id="@+id/itemNote_tv_name"
-                style="@style/ItemNote.Name"
-                android:text='@{itemNote.name}'
-                android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}' />
-
-            <TextView
-                android:id="@+id/itemNote_tv_text"
-                style="@style/ItemNote.Text"
-                android:text='@{itemNote.text}' />
-
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/layout_8dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_rank"
-                    style="@style/ItemNote.Indicator"
-                    android:contentDescription="@null"
-                    android:layout_marginEnd="@dimen/layout_4dp"
-                    android:layout_marginRight="@dimen/layout_4dp"
-                    android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
-                    app:srcCompat="@drawable/ic_rank" />
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_bind"
-                    style="@style/ItemNote.Indicator"
-                    android:contentDescription="@null"
-                    android:layout_marginEnd="@dimen/layout_4dp"
-                    android:layout_marginRight="@dimen/layout_4dp"
-                    android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
-                    app:srcCompat="@drawable/ic_bind_text" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/itemNote_tv_change"
-                    style="@style/ItemNote.Info"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text='@{Time.formatNoteDate(context, itemNote.change)}' />
+                    android:id="@+id/itemNote_tv_name"
+                    style="@style/ItemNote.Name"
+                    android:text='@{itemNote.name}'
+                    android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}' />
 
                 <TextView
-                    android:id="@+id/itemNote_tv_create"
-                    style="@style/ItemNote.Info"
-                    android:layout_width="wrap_content"
-                    android:text='@{Time.formatNoteDate(context, itemNote.create)}' />
+                    android:id="@+id/itemNote_tv_text"
+                    style="@style/ItemNote.Text"
+                    android:text='@{itemNote.text}' />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/layout_8dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_rank"
+                        style="@style/ItemNote.Indicator.Info"
+                        android:contentDescription="@null"
+                        android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
+                        app:srcCompat="@drawable/ic_rank" />
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_bind"
+                        style="@style/ItemNote.Indicator.Info"
+                        android:contentDescription="@null"
+                        android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
+                        app:srcCompat="@drawable/ic_bind_text" />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_change"
+                        style="@style/ItemNote.Info"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:text='@{Time.formatNoteDate(context, itemNote.change)}' />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_create"
+                        style="@style/ItemNote.Info"
+                        android:layout_width="wrap_content"
+                        android:text='@{Time.formatNoteDate(context, itemNote.create)}' />
+
+                </LinearLayout>
 
             </LinearLayout>
+
+            <View
+                android:id="@+id/itemNote_iv_color"
+                android:layout_width="@dimen/layout_4dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/layout_4dp"
+                android:background='@{Icon.getColorNote(context, itemNote.color, true)}'
+                android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}' />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </layout>
