--- a/app/src/main/res/values-v23/sty_app.xml
+++ b/app/src/main/res/values-v23/sty_app.xml
@@ -9,14 +9,20 @@
         <item name="clText">@color/textLight</item>
         <item name="clSecond">@color/secondLight</item>
 
+        <item name="clInfo">?attr/clText</item>
+        <item name="clInfoIndicator">?attr/clIcon</item>
+
         <item name="colorPrimary">?attr/clPrimary</item>
         <item name="colorPrimaryDark">?attr/clPrimary</item>
         <item name="colorAccent">?attr/clAccent</item>
 
         <item name="android:windowLightStatusBar">true</item>
 
-        <item name="alertDialogStyle">@style/App.Light.Alert</item>
-        <item name="alertDialogTheme">@style/App.Light.Alert</item>
+        <item name="styleToolbar">@style/Toolbar.Light</item>
+        <item name="themePopup">@style/PopupTheme.Light</item>
+
+        <item name="alertDialogStyle">@style/Alert.Light</item>
+        <item name="alertDialogTheme">@style/Alert.Light</item>
     </style>
 
     <style name="App.Dark" parent="Theme.AppCompat.NoActionBar">
@@ -27,14 +33,20 @@
         <item name="clText">@color/textDark</item>
         <item name="clSecond">@color/secondDark</item>
 
+        <item name="clInfo">?attr/clSecond</item>
+        <item name="clInfoIndicator">?attr/clAccent</item>
+
         <item name="colorPrimary">?attr/clPrimary</item>
         <item name="colorPrimaryDark">?attr/clPrimary</item>
         <item name="colorAccent">?attr/clAccent</item>
 
         <item name="android:windowLightStatusBar">false</item>
 
-        <item name="alertDialogStyle">@style/App.Dark.Alert</item>
-        <item name="alertDialogTheme">@style/App.Dark.Alert</item>
+        <item name="styleToolbar">@style/Toolbar.Dark</item>
+        <item name="themePopup">@style/PopupTheme.Dark</item>
+
+        <item name="alertDialogStyle">@style/Alert.Dark</item>
+        <item name="alertDialogTheme">@style/Alert.Dark</item>
     </style>
 
 </resources>
