--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,9 +7,17 @@
         <attr name="clPrimary" format="color" />
         <attr name="clIcon" format="color" />
         <attr name="clText" format="color" />
-        <attr name="clSecond" format="color"/>
+        <attr name="clSecond" format="color" />
+    </declare-styleable>
 
-        <attr name="overflowTheme" format="integer"/> <!-- TODO Overflow menu change -->
+    <declare-styleable name="NoteTheme">
+        <attr name="clInfo" format="color" />
+        <attr name="clInfoIndicator" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="ToolbarTheme">
+        <attr name="styleToolbar" format="integer" />
+        <attr name="themePopup" format="integer" />
     </declare-styleable>
 
 </resources>
