--- a/app/src/main/res/values/sty_app.xml
+++ b/app/src/main/res/values/sty_app.xml
@@ -11,12 +11,18 @@
         <item name="clText">@color/textLight</item>
         <item name="clSecond">@color/secondLight</item>
 
+        <item name="clInfo">?attr/clText</item>
+        <item name="clInfoIndicator">?attr/clIcon</item>
+
         <item name="colorPrimary">?attr/clPrimary</item>
         <item name="colorPrimaryDark">?attr/clSecond</item>
         <item name="colorAccent">?attr/clAccent</item>
 
-        <item name="alertDialogStyle">@style/App.Light.Alert</item>
-        <item name="alertDialogTheme">@style/App.Light.Alert</item>
+        <item name="styleToolbar">@style/Toolbar.Light</item>
+        <item name="themePopup">@style/PopupTheme.Light</item>
+
+        <item name="alertDialogStyle">@style/Alert.Light</item>
+        <item name="alertDialogTheme">@style/Alert.Light</item>
     </style>
 
     <style name="App.Dark" parent="Theme.AppCompat.NoActionBar">
@@ -27,33 +33,40 @@
         <item name="clText">@color/textDark</item>
         <item name="clSecond">@color/secondDark</item>
 
+        <item name="clInfo">?attr/clSecond</item>
+        <item name="clInfoIndicator">?attr/clAccent</item>
+
         <item name="colorPrimary">?attr/clPrimary</item>
         <item name="colorPrimaryDark">?attr/clPrimary</item>
         <item name="colorAccent">?attr/clAccent</item>
 
-        <item name="alertDialogStyle">@style/App.Dark.Alert</item>
-        <item name="alertDialogTheme">@style/App.Dark.Alert</item>
+        <item name="styleToolbar">@style/Toolbar.Dark</item>
+        <item name="themePopup">@style/PopupTheme.Dark</item>
+
+        <item name="alertDialogStyle">@style/Alert.Dark</item>
+        <item name="alertDialogTheme">@style/Alert.Dark</item>
     </style>
 
-    <style name="App.Light.Alert" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="Alert.Light" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">?attr/clAccent</item>
     </style>
 
-    <style name="App.Dark.Alert" parent="Theme.AppCompat.Dialog.Alert">
+    <style name="Alert.Dark" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">?attr/clAccent</item>
     </style>
 
-    <style name="App.Light.ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
+    <style name="PopupTheme.Light" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:textColorPrimary">?attr/clText</item>
         <item name="android:textColorSecondary">?attr/clText</item>
         <item name="colorControlNormal">?attr/clIcon</item>
         <item name="actionMenuTextColor">?attr/clText</item>
     </style>
 
-    <style name="App.Dark.ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:textColorPrimary">@color/textAccent</item>
-        <item name="android:textColorSecondary">@color/textAccent</item>
-        <item name="actionMenuTextColor">@color/textAccent</item>
+    <style name="PopupTheme.Dark" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="android:textColorPrimary">?attr/clText</item>
+        <item name="android:textColorSecondary">?attr/clText</item>
+        <item name="colorControlNormal">?attr/clIcon</item>
+        <item name="actionMenuTextColor">?attr/clText</item>
     </style>
 
     <style name="Toolbar">
@@ -63,49 +76,11 @@
     </style>
 
     <style name="Toolbar.Light">
-        <item name="android:theme">@style/App.Light.ToolbarTheme</item>
+        <item name="android:theme">@style/PopupTheme.Light</item>
     </style>
 
     <style name="Toolbar.Dark">
-        <item name="android:theme">@style/App.Dark.ToolbarTheme</item>
-    </style>
-
-    <style name="NavigationView">
-        <item name="android:background">?attr/clPrimary</item>
-        <item name="android:textColorSecondary">?attr/clSecond</item>
-    </style>
-
-    <style name="Card">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">@dimen/layout_2dp</item>
-        <item name="android:layout_marginRight">@dimen/layout_2dp</item>
-    </style>
-
-    <style name="EditText" parent="Widget.AppCompat.EditText">
-        <item name="android:textColor">?attr/clText</item>
-        <item name="android:textColorHint">?attr/clSecond</item>
-    </style>
-
-    <style name="RecyclerView">
-        <item name="android:clipToPadding">false</item>
-        <item name="android:paddingBottom">@dimen/layout_2dp</item>
-        <item name="android:paddingTop">@dimen/layout_2dp</item>
-        <item name="android:scrollbars">vertical</item>
-    </style>
-
-    <style name="Divider">
-        <item name="android:background">?android:attr/listDivider</item>
-    </style>
-
-    <style name="Divider.Horizontal">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/layout_1dp</item>
-    </style>
-
-    <style name="Divider.Vertical">
-        <item name="android:layout_width">@dimen/layout_1dp</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:theme">@style/PopupTheme.Dark</item>
     </style>
 
 </resources>
