Продолжаю доделывать 2 стиля

--- a/app/src/main/res/layout-v21/inc_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_note.xml
@@ -83,8 +83,7 @@
 
         <View
             android:id="@+id/incToolbarNote_iv_color"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/layout_4dp"
+            style="@style/ItemNote.Color.Horizontal"
             android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}' />
 
     </com.google.android.material.appbar.AppBarLayout>
