--- a/app/src/main/res/layout/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout/inc_toolbar_rank.xml
@@ -53,6 +53,6 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <!--<View style="@style/Divider.Horizontal" />-->
+    <View style="@style/Divider.Horizontal" />
 
 </com.google.android.material.appbar.AppBarLayout>
