--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -42,147 +42,147 @@
             android:id="@+id/itemNote_ll_click"
             style="@style/ItemNote.Click">
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/itemNote_tv_name"
-                style="@style/ItemNote.Name"
-                android:text='@{itemNote.name}'
-                android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}' />
-
             <LinearLayout
-                android:id="@+id/itemNote_ll_roll_1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:visibility='@{listRoll.size() &gt;= 1 ? v.VISIBLE : v.GONE}'>
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_check_1"
-                    style="@style/ItemNote.Indicator"
-                    android:contentDescription="@null"
-                    android:src='@{listRoll.size() &gt;= 1 &amp;&amp; listRoll.get(0).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/itemNote_tv_text_1"
-                    style="@style/ItemNote.Roll"
-                    android:text='@{listRoll.size() &gt;= 1 ? listRoll.get(0).text : @string/test_item_note_roll_1}' />
+                    android:id="@+id/itemNote_tv_name"
+                    style="@style/ItemNote.Name"
+                    android:text='@{itemNote.name}'
+                    android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}' />
+
+                <LinearLayout
+                    android:id="@+id/itemNote_ll_roll_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:visibility='@{listRoll.size() &gt;= 1 ? v.VISIBLE : v.GONE}'>
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_check_1"
+                        style="@style/ItemNote.Indicator"
+                        android:contentDescription="@null"
+                        android:src='@{listRoll.size() &gt;= 1 &amp;&amp; listRoll.get(0).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_text_1"
+                        style="@style/ItemNote.Roll"
+                        android:text='@{listRoll.size() &gt;= 1 ? listRoll.get(0).text : @string/test_item_note_roll_1}' />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/itemNote_ll_roll_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:visibility='@{listRoll.size() &gt;= 2 ? v.VISIBLE : v.GONE}'>
+
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_check_2"
+                        style="@style/ItemNote.Indicator"
+                        android:contentDescription="@null"
+                        android:src='@{listRoll.size() &gt;= 2 &amp;&amp; listRoll.get(1).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_text_2"
+                        style="@style/ItemNote.Roll"
+                        android:text='@{listRoll.size() &gt;= 2 ? listRoll.get(1).text : @string/test_item_note_roll_2}' />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/itemNote_ll_roll_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:visibility='@{listRoll.size() &gt;= 3 ? v.VISIBLE : v.GONE}'>
+
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_check_3"
+                        style="@style/ItemNote.Indicator"
+                        android:contentDescription="@null"
+                        android:src='@{listRoll.size() &gt;= 3 &amp;&amp; listRoll.get(2).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_text_3"
+                        style="@style/ItemNote.Roll"
+                        android:text='@{listRoll.size() &gt;= 3 ? listRoll.get(2).text : @string/test_item_note_roll_3}' />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/itemNote_ll_roll_4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:visibility='@{listRoll.size() &gt;= 4 ? v.VISIBLE : v.GONE}'>
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_check_4"
+                        style="@style/ItemNote.Indicator"
+                        android:contentDescription="@null"
+                        android:src='@{listRoll.size() &gt;= 4 &amp;&amp; listRoll.get(3).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_text_4"
+                        style="@style/ItemNote.Roll"
+                        android:text='@{listRoll.size() &gt;= 4 ? listRoll.get(3).text : @string/test_item_note_roll_4}' />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/layout_8dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_rank"
+                        style="@style/ItemNote.Indicator.Info"
+                        android:contentDescription="@null"
+                        android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
+                        app:srcCompat="@drawable/ic_rank" />
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_bind"
+                        style="@style/ItemNote.Indicator.Info"
+                        android:contentDescription="@null"
+                        android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
+                        app:srcCompat="@drawable/ic_bind_roll" />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_text"
+                        style="@style/ItemNote.Info"
+                        android:layout_width="wrap_content"
+                        android:text='@{itemNote.text}' />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_change"
+                        style="@style/ItemNote.Info"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:text='@{Time.formatNoteDate(context, itemNote.change)}' />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_create"
+                        style="@style/ItemNote.Info"
+                        android:layout_width="wrap_content"
+                        android:text='@{Time.formatNoteDate(context, itemNote.create)}' />
+
+                </LinearLayout>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/itemNote_ll_roll_2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:visibility='@{listRoll.size() &gt;= 2 ? v.VISIBLE : v.GONE}'>
-
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_check_2"
-                    style="@style/ItemNote.Indicator"
-                    android:contentDescription="@null"
-                    android:src='@{listRoll.size() &gt;= 2 &amp;&amp; listRoll.get(1).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
-
-                <TextView
-                    android:id="@+id/itemNote_tv_text_2"
-                    style="@style/ItemNote.Roll"
-                    android:text='@{listRoll.size() &gt;= 2 ? listRoll.get(1).text : @string/test_item_note_roll_2}' />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/itemNote_ll_roll_3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:visibility='@{listRoll.size() &gt;= 3 ? v.VISIBLE : v.GONE}'>
-
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_check_3"
-                    style="@style/ItemNote.Indicator"
-                    android:contentDescription="@null"
-                    android:src='@{listRoll.size() &gt;= 3 &amp;&amp; listRoll.get(2).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
-
-                <TextView
-                    android:id="@+id/itemNote_tv_text_3"
-                    style="@style/ItemNote.Roll"
-                    android:text='@{listRoll.size() &gt;= 3 ? listRoll.get(2).text : @string/test_item_note_roll_3}' />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/itemNote_ll_roll_4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:visibility='@{listRoll.size() &gt;= 4 ? v.VISIBLE : v.GONE}'>
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_check_4"
-                    style="@style/ItemNote.Indicator"
-                    android:contentDescription="@null"
-                    android:src='@{listRoll.size() &gt;= 4 &amp;&amp; listRoll.get(3).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
-
-                <TextView
-                    android:id="@+id/itemNote_tv_text_4"
-                    style="@style/ItemNote.Roll"
-                    android:text='@{listRoll.size() &gt;= 4 ? listRoll.get(3).text : @string/test_item_note_roll_4}' />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/layout_8dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_rank"
-                    style="@style/ItemNote.Indicator.Info"
-                    android:contentDescription="@null"
-                    android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
-                    app:srcCompat="@drawable/ic_rank" />
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_bind"
-                    style="@style/ItemNote.Indicator.Info"
-                    android:contentDescription="@null"
-                    android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
-                    app:srcCompat="@drawable/ic_bind_roll" />
-
-                <TextView
-                    android:id="@+id/itemNote_tv_text"
-                    style="@style/ItemNote.Info"
-                    android:layout_width="wrap_content"
-                    android:text='@{itemNote.text}' />
-
-                <TextView
-                    android:id="@+id/itemNote_tv_change"
-                    style="@style/ItemNote.Info"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text='@{Time.formatNoteDate(context, itemNote.change)}' />
-
-                <TextView
-                    android:id="@+id/itemNote_tv_create"
-                    style="@style/ItemNote.Info"
-                    android:layout_width="wrap_content"
-                    android:text='@{Time.formatNoteDate(context, itemNote.create)}' />
-
-            </LinearLayout>
-
-        </LinearLayout>
 
             <View
                 android:id="@+id/itemNote_iv_color"
-                android:layout_width="@dimen/layout_4dp"
-                android:layout_height="match_parent"
+                style="@style/ItemNote.Color.Vertical"
+                android:layout_marginStart="@dimen/layout_4dp"
                 android:layout_marginLeft="@dimen/layout_4dp"
                 android:background='@{Icon.getColorNote(context, itemNote.color, true)}'
                 android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}' />
