--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,11 +3,12 @@
 
     <declare-styleable name="AppColorTheme">
         <attr name="clAccent" format="color" />
-        <attr name="clBackground" format="color" />
         <attr name="clPrimary" format="color" />
+        <attr name="clDivider" format="color" />
+        <attr name="clBackground" format="color" />
+        <attr name="clSecond" format="color" />
         <attr name="clIcon" format="color" />
         <attr name="clText" format="color" />
-        <attr name="clSecond" format="color" />
     </declare-styleable>
 
     <declare-styleable name="NoteTheme">
