--- a/app/src/main/res/values/sty_element.xml
+++ b/app/src/main/res/values/sty_element.xml
@@ -26,7 +26,7 @@
     </style>
 
     <style name="Divider">
-        <item name="android:background">?android:attr/listDivider</item>
+        <item name="android:background">?attr/clDivider</item>
     </style>
 
     <style name="Divider.Horizontal">
