--- a/app/src/main/res/values/sty_item_note.xml
+++ b/app/src/main/res/values/sty_item_note.xml
@@ -62,4 +62,16 @@
         <item name="android:tint">?attr/clInfoIndicator</item>
     </style>
 
+    <style name="ItemNote.Color"/>
+
+    <style name="ItemNote.Color.Vertical">
+        <item name="android:layout_width">@dimen/layout_4dp</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="ItemNote.Color.Horizontal">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/layout_4dp</item>
+    </style>
+
 </resources>
