--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,6 +6,7 @@
         <attr name="clPrimary" format="color" />
         <attr name="clDivider" format="color" />
         <attr name="clBackground" format="color" />
+        <attr name="clBackgroundEnter" format="color"/>
         <attr name="clSecond" format="color" />
         <attr name="clIcon" format="color" />
         <attr name="clText" format="color" />
