--- a/app/src/main/res/layout/frg_roll.xml
+++ b/app/src/main/res/layout/frg_roll.xml
@@ -25,8 +25,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/clBackground"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="?attr/clBackground">
 
         <include
             layout="@layout/inc_toolbar_note"
