--- a/app/src/main/res/layout/view_about.xml
+++ b/app/src/main/res/layout/view_about.xml
@@ -5,14 +5,15 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="@dimen/layout_8dp">
+    android:padding="@dimen/layout_16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/layout_8dp">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -44,7 +45,8 @@
                 style="@style/ViewAbout.Subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/about_app_for" />
+                android:text="@string/about_app_for"
+                android:paddingBottom="@dimen/layout_4dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -79,7 +81,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/layout_8dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -102,7 +105,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/layout_4dp"
         android:gravity="center"
         android:text="@string/about_app_version"
         android:textColor="?attr/clText"
