--- a/app/src/main/res/values-v21/sty_element.xml
+++ b/app/src/main/res/values-v21/sty_element.xml
@@ -4,7 +4,15 @@
     <style name="Card">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/layout_2dp</item>
+        <item name="android:layout_margin">@dimen/layout_4dp</item>
+    </style>
+
+
+    <style name="RecyclerView">
+        <item name="android:clipToPadding">false</item>
+        <item name="android:paddingBottom">@dimen/layout_4dp</item>
+        <item name="android:paddingTop">@dimen/layout_4dp</item>
+        <item name="android:scrollbars">vertical</item>
     </style>
 
 </resources>
