--- a/app/src/main/res/values/col_app.xml
+++ b/app/src/main/res/values/col_app.xml
@@ -7,20 +7,20 @@
     <color name="accentLight">#039be5</color>
     <color name="accentDark">#fb8c00</color>
 
-    <color name="primaryLight">#f5f5f5</color>
+    <color name="primaryLight">#fafafa</color>
     <color name="primaryDark">#353535</color>
 
-    <color name="dividerLight">#e5e5e5</color>
-    <color name="dividerDark">#252525</color>
-
-    <color name="backgroundLight">#eaeaea</color>
+    <color name="backgroundLight">#eeeeee</color>
     <color name="backgroundDark">#454545</color>
+
+    <color name="dividerLight">#e0e0e0</color>
+    <color name="dividerDark">#252525</color>
 
     <color name="backgroundEnterLight">#ffffff</color>
     <color name="backgroundEnterDark">#454545</color>
 
-    <color name="secondLight">#969696</color>
-    <color name="secondDark">#b1b1b1</color>
+    <color name="secondLight">#9e9e9e</color>
+    <color name="secondDark">#bdbdbd</color>
 
     <color name="iconLight">#353535</color>
     <color name="iconDark">#f5f5f5</color>
