--- a/app/src/main/res/values/val_app.xml
+++ b/app/src/main/res/values/val_app.xml
@@ -2,15 +2,13 @@
 <resources>
 
     <!-- Text length -->
-    <integer name="length_max_note_name">30</integer>
+    <integer name="length_max_note_name">50</integer>
     <integer name="length_max_rank_name">30</integer>
 
     <!-- Drawable part name -->
-    <string name="drawable_group_strike_path" translatable="false">group_strike_path</string>
+    <string name="drawable_group_visible" translatable="false">group_visible</string>
     <string name="drawable_strike_path" translatable="false">strike_path</string>
-    <string name="drawable_group_strike_mask" translatable="false">group_strike_mask</string>
     <string name="drawable_strike_mask" translatable="false">strike_mask</string>
-    <string name="drawable_group_eye_path" translatable="false">group_eye_path</string>
     <string name="drawable_eye_path" translatable="false">eye_path</string>
 
 </resources>
