DefDb ItemRollWrite ic_move - цвет зависит от выделенного пункта

--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -39,7 +39,7 @@
 
                 <ImageView
                     android:id="@+id/itemRoll_iv_click"
-                    style="@style/ItemRoll.Read.Click"
+                    style="@style/ItemRoll.Click"
                     android:contentDescription="@null"
                     android:visibility='@{keyBin ? v.INVISIBLE : v.VISIBLE}' />
 
