--- a/app/src/main/res/drawable/ic_color_06_l.xml
+++ b/app/src/main/res/drawable/ic_color_06_l.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/notePurple" />
+    <solid android:color="@color/noteYellow" />
     <stroke
-        android:width="1dp"
-        android:color="@color/notePurpleDark" />
+        android:width="@dimen/layout_1dp"
+        android:color="@color/noteYellowDark" />
     <size
         android:width="24dp"
         android:height="24dp" />
