--- a/app/src/main/res/drawable/ic_color_08_l.xml
+++ b/app/src/main/res/drawable/ic_color_08_l.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/noteBlue" />
+    <solid android:color="@color/noteBrown" />
     <stroke
-        android:width="1dp"
-        android:color="@color/noteBlueDark" />
+        android:width="@dimen/layout_1dp"
+        android:color="@color/noteBrownDark" />
     <size
         android:width="24dp"
         android:height="24dp" />
