--- a/app/src/main/res/layout/inc_toolbar_note.xml
+++ b/app/src/main/res/layout/inc_toolbar_note.xml
@@ -6,7 +6,7 @@
 
         <import type="sgtmelon.handynotes.R" />
 
-        <import type="sgtmelon.handynotes.office.Help.Icon" />
+        <import type="sgtmelon.handynotes.office.Help.Draw" />
 
         <import type="sgtmelon.handynotes.office.Help.Pref" />
 
@@ -45,7 +45,7 @@
             app:contentInsetLeft="@dimen/layout_8dp"
             app:contentInsetRight="@dimen/layout_8dp"
             app:contentInsetStart="@dimen/layout_8dp"
-            app:navigationIcon='@{keyEdit &amp;&amp; !keyCreate ? Icon.getDrawable(context, R.attr.clIcon, R.drawable.ic_cancel) : Icon.getDrawable(context, R.attr.clIcon, R.drawable.ic_arrow_back)}'
+            app:navigationIcon='@{keyEdit &amp;&amp; !keyCreate ? Draw.get(context, R.drawable.ic_cancel, R.attr.clIcon) : Draw.get(context, R.drawable.ic_arrow_back, R.attr.clIcon)}'
             app:popupTheme="?attr/themePopup">
 
             <FrameLayout
