--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -3,7 +3,7 @@
 
     <data>
 
-        <import type="sgtmelon.handynotes.office.Help.Icon" />
+        <import type="sgtmelon.handynotes.office.Help.Draw" />
 
         <variable
             name="position"
@@ -23,7 +23,7 @@
             android:layout_width="@dimen/icon_48dp"
             android:layout_height="@dimen/icon_48dp"
             android:layout_gravity="center"
-            android:background='@{Icon.getColorIcon(context, position)}'
+            android:background='@{Draw.getIconColor(context, position)}'
             android:contentDescription="@null" />
 
         <ImageView
@@ -32,7 +32,7 @@
             android:layout_height="@dimen/icon_24dp"
             android:layout_gravity="center"
             android:contentDescription="@null"
-            android:src='@{Icon.getColorCheck(context, position)}' />
+            android:src='@{Draw.getIconCheck(context, position)}' />
 
         <ImageView
             android:id="@+id/itemColor_iv_click"
